--- a/website/requirements.txt
+++ b/website/requirements.txt
@@ -4,11 +4,13 @@ diff-match-patch==20200713
 Django==3.2.12
 django-cleanup==6.0.0
 django-import-export==2.7.1
+django-phonenumber-field==6.1.0
 et-xmlfile==1.1.0
 gunicorn==20.1.0
 MarkupPy==1.14
 odfpy==1.4.1
 openpyxl==3.0.9
+phonenumberslite==8.12.45
 Pillow==9.0.1
 pytz==2022.1
 PyYAML==6.0
