--- a/website/requirements.txt
+++ b/website/requirements.txt
@@ -1,14 +1,18 @@
 asgiref==3.5.0
+cleanup==1.0.3
 defusedxml==0.7.1
 diff-match-patch==20200713
 Django==3.2.12
 django-cleanup==6.0.0
-django-grappelli==3.0.3
 django-import-export==2.7.1
 django-phonenumber-field==6.1.0
+django-ranged-response==0.2.0
+django-simple-captcha==0.5.17
 django-tinymce==3.4.0
+docopt==0.6.2
 et-xmlfile==1.1.0
 gunicorn==20.1.0
+huepy==1.2.1
 MarkupPy==1.14
 odfpy==1.4.1
 openpyxl==3.0.9
